# neural_network_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  compose.yaml
.github/workflows/: docker-deploy.yml
.run/: Run Local Release.run.xml
resources/models/03.04.2024_09-32-59/: biases_0  biases_1  biases_10  biases_2  biases_3  biases_4  biases_5  biases_6  biases_7  biases_8  biases_9  weights_0  weights_1  weights_10  weights_2  weights_3  weights_4  weights_5  weights_6  weights_7  weights_8  weights_9
resources/models/10.04.2024_21-38-02/: biases_0  biases_1  biases_2  lr  weights_0  weights_1  weights_2
resources/models/20240607141752/: network
resources/models/20240620151542/: network
resources/models/20240906081430/: network
resources/models/23042024123942/: network
src/: data_point.rs  data_sets.rs  emnist_parser.rs  error.rs  function.rs  image_processor.rs  layer.rs  main.rs  network.rs  optimizers.rs  plotter.rs  tests.rs  utils.rs
