[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
rand = "0.9.0-alpha.0"
conv = "0.3.3"
indicatif = "0.17.8"
byteorder = "1.5.0"
image = "0.25.0"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = "0.4.37"
rocket = { version = "0.5.0", features = ["json"] }
base64 = "0.22.0"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version ="0.27.2", features = ["image"] }
egui_plot = "0.27.2"
plotters = "0.3.5"