[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32.4", features = ["rand"] }
rand = "0.9.0-alpha.0"
conv = "0.3.3"
indicatif = "0.17.8"
byteorder = "1.5.0"
image = "0.25.0"
imageproc = "0.25.0"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_repr = "0.1.19"
chrono = "0.4.37"
rocket = { version = "0.5.0", features = ["json"] }
base64 = "0.22.0"
plotters = "0.3.5"
proc-macro2 = "1.0.81"
rayon = "1.10.0"
log = "0.4.21"
num-integer = "0.1.46"
regex = "1.10.4"
derive-getters = "0.4.0"