[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.32.4", features = ["rand"] }
rand = "0.9.0-alpha.0"
indicatif = "0.17.8"
byteorder = "1.5.0"
image = "0.25.0"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = "0.4.37"
rocket = { version = "0.5.0", features = ["json"] }
plotters = "0.3.5"
num-integer = "0.1.46"
regex = "1.10.4"
derive-getters = "0.4.0"